# backend

./: .coveragerc  .gitignore  README.md  TODO.md  pyproject.toml  pytest.ini  sonar-project.properties
src/apps/Authentication/: apps.py
src/apps/Authentication/admin/: CustomUserAdmin.py  ProfileAdmin.py  __init__.py
src/apps/Authentication/api/v1/: docs.py  urls.py
src/apps/Authentication/authentication/: CookieJwtAuth.py  CookieJwtAuthScheme.py  JwtAuthMiddleware.py  __init__.py
src/apps/Authentication/models/: Agent.py  CustomUser.py  UserProfile.py  __init__.py
src/apps/Authentication/permissions/: CustomDjangoModelPermission.py  __init__.py
src/apps/Authentication/service/: BaseService.py  __init__.py
src/apps/Authentication/service/auth/: BlacklistService.py  CreateTokenService.py  RefreshSerivce.py  RegisterService.py  __init__.py
src/apps/Authentication/service/onboard/: MetadataUserService.py  __init__.py
src/apps/Authorization/admin/: PolicyAdmin.py  RuleAdmin.py  __init__.py
src/apps/Authorization/models/: Policy.py  Rule.py  __init__.py
src/apps/Authorization/permissions/: CustomPermission.py  Engine.py  SubscriptionPermission.py  __init__.py
src/apps/Billing/admin/: CurrencyAdmin.py  FeatureAdmin.py  PeriodAdmin.py  PlanAdmin.py  PriceAdmin.py  QuotaAdmin.py  QuotaPlanAdmin.py  SubscriptionAdmin.py  SuscriptionAdmin.py  UsageAdmin.py  __init__.py
src/apps/Billing/api/v1/: docs.py  urls.py
src/apps/Billing/models/: Currency.py  Feature.py  Period.py  Plan.py  Price.py  Quota.py  QuotaPlan.py  Subscription.py  Suscription.py  Usage.py  __init__.py
src/apps/Billing/repository/: StripeRepository.py  __init__.py
src/apps/Billing/service/: __init__.py
src/apps/Billing/service/Stripe/: BaseStripeService.py  __init__.py  (+5 more)
src/apps/Chat/admin/: AgentAdmin.py  ChatAdmin.py  ChatParticipantAdmin.py  MessageAdmin.py  MessageStatusAdmin.py  NatureAdmin.py  ParticipantAdmin.py  __init__.py
src/apps/Chat/models/: Agent.py  Chat.py  ChatParticipant.py  Message.py  MessageStatus.py  Nature.py  Participant.py  __init__.py
src/apps/Chat/repository/: OllamaRepository.py  __init__.py
src/apps/Chat/service/: BaseOllamaService.py  CreateChatService.py  CreateMessageService.py  OllamaChatService.py  __init__.py
src/apps/Chat/tasks/: MessageTask.py  __init__.py
src/apps/Common/: apps.py
src/apps/Common/filters/: ChatFilter.py  __init__.py
src/apps/Common/models/: ActivatorModel.py  CustomGroups.py  CustomModel.py  Frequency.py  Gender.py  Period.py  PlanOption.py  StatusSuscription.py  Utils.py  __init__.py
src/apps/Common/pagination/: ChatPagination.py  MessagePagination.py  __init__.py
src/apps/Common/signals/: CreateStripeCustomer.py  CustomerSignal.py  MessageSignal.py  __init__.py
src/apps/Common/throttles/: FailedLoginThrottle.py  RefreshRateThrottle.py  __init__.py
src/apps/Common/utils/: StripeSDK.py  __init__.py
src/apps/Common/validators/: __init__.py  utils.py
src/commons/models/: ActivatorModel.py  CustomModel.py  __init__.py
src/config/: asgi.py  celery.py  routing.py  urls.py  views.py
src/config/settings/: __init__.py  apps.py  base.py  database.py  development.py  i18n.py  middleware.py  static.py
src/config/settings/libraries/: __init__.py  corsheaders.py  django_phonenumber_field.py  drf.py  simple_jwt.py  spectacular.py
src/requirements/: base.txt  development.txt  test.txt
test/: __init__.py  conftest.py  test_activator_model.py  test_auth_login.py  test_auth_refresh_token.py  test_auth_registration.py  test_cookie_jwt_auth.py  test_cookie_jwt_auth_scheme.py  test_custom_user_manager.py  test_custom_user_serializer.py  test_validators_utils.py  test_wait_db_command.py
(+58 files in other folders)
